# BiG-SCAPE

./: .coverage  .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  ArrowerSVG.py  CITATION.cff  CONTRIBUTING.md  Dockerfile  Installation Guide.md  LICENSE  Pfam-A.hmm.REMOVED.git-id  README.md  __main__.py  anchor_domains.txt  bgc_data.py  bgc_functions.py  bgc_networks.py  bgc_networks_broken_multi.py  bgc_runner.py  big_scape.py  big_simworks.py  bigscape-benchmark.py  bigscape.py  bigscape.py.bak  bigscape_dependencies.yml  config.ini  config.yml  dev-requirements.txt  domain_whitelist.txt  domains_color_file.tsv  environment.yml  functions.py  functions.py.bak  gene_color_file.tsv  git_commit_command.txt  index.html  mkdocs.yml  munkres.py  mypy.ini  (+7 more)
.github/ISSUE_TEMPLATE/: bug_report.md  question-about-big-scape-process-or-results.md
.github/workflows/: badges.yml  cicd.yml  deploy-docker.yml  deploy.yml  docker.yml  docs.yml  run-tests.yml  stale-issues.yml  test.yml  update-version.yml
benchmark/: __init__.py  benchmark.py  main.py
benchmark/data/: __init__.py  benchmark.py  load_data.py
benchmark/metrics/: __init__.py  gcf_evaluation.py
benchmark/output/: __init__.py  output.py
benchmark/parameters/: __init__.py  cmd_parser.py
big_scape/: __init__.py  __main__.py  benchmark.py  cluster.py  config.yml  main.py  paths.py  query.py  run_bigscape.py
big_scape/benchmarking/: __init__.py  benchmark.py  benchmark_data_loader.py  benchmark_metrics.py  benchmark_output.py
big_scape/cli/: __init__.py  benchmark_cli.py  cli_common_options.py  cli_config.py  cli_validations.py  cluster_cli.py  config.py  constants.py  dereplicate_cli.py  query_cli.py
big_scape/comparison/: __init__.py  binning.py  comparable_region.py  extend.py  lcs.py  legacy_bins.py  legacy_extend.py  legacy_lcs.py  legacy_workflow_alt.py  record_pair.py  utility.py  workflow.py
big_scape/data/: __init__.py  partial_task.py  schema.sql  sqlite.py
big_scape/dereplicating/: __init__.py  data_loading.py  dereplicate.py  gbk_component_parsing.py  gbk_feature_parsing.py  input_data_loading.py  networking.py  output_generation.py  sourmash_utilities.py
big_scape/diagnostics/: __init__.py  logger.py  (+1 more)
docs/: index.md
html_template/: index.html  index_html  overview.html  overview_html
src/: __init__.py
test/: test_adjacency_index.py  test_big_scape.py  test_distance_calculation.py  test_jaccard.py  test_tests.py
(+350 files in other folders)
